--- a/taskuraha-client/src/index.css
+++ b/taskuraha-client/src/index.css
@@ -10,9 +10,15 @@ body {
   width: 100%;
   padding: 0;
   margin: 0;
-  background-color: white;
 }
 
 :root {
-  --basicFontSize: 12px;
+  --inputHeight: 25px;
+  --paddingButton: 3px;
+  --colorBlack: black;
+  --colorWhite: white;
+  --fontSizeBasic: 12px;
+  --fontSizeMedium: 15px;
+  --fontSizeHeader: 18px;
+  --fontSizeLargeHeader: 24px;
 }
