--- a/taskuraha-client/src/Footer/Footer.module.css
+++ b/taskuraha-client/src/Footer/Footer.module.css
@@ -1,10 +1,10 @@
-
-.Footer {
-    background-color: rgb(95, 150, 245);
+.main {
+    background-color: var(--colorPastelYellow);
     margin-top: 30px;
     height: 50px;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    color: white;
+    color: var(--colorDarkGrey);
+    font-weight: bold;
 }
