--- a/taskuraha-client/src/Navbar/Navbar.module.css
+++ b/taskuraha-client/src/Navbar/Navbar.module.css
@@ -1,65 +1,39 @@
-.Navbar {
+.main {
+    position: sticky;
+    top: 0;
     width: 100%;
+    height: fit-content;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: var(--colorWhite);
+    z-index: 2;
+}
+
+.contentContainer {
     height: 70px;
-    background-color: var(--colorBlack);
+    width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
 }
 
+.leftContainer {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
 .logoContainer {
-    margin-left: 15px;
-    margin-right: 15px;
-    font-size: var(--fontSizeHeader);
-    color: var(--colorWhite)
+    margin-left: 20px;
+    margin-right: 20px;
 }
 
-.menuContainer {
-    margin-left: 15px;
-    margin-right: 15px;
-}
-
-.burgerContainer {
-    display: flex;
-    flex-direction: column;
-    background-color: var(--colorBlack);
-    cursor: pointer;
-}
-
-.burgerLine {
-    width: 30px;
-    height: 2px;
-    margin-top: 3px;
-    margin-bottom: 3px;
-    background-color: white;
-}
-
-.menu {
-    position: absolute;
-    box-shadow: 0 0 3px rgba(0, 0, 0, 0.5);
-    border-bottom-left-radius: 4px;
-    background-color: white;
-    width: 250px;
-    right: 0px;
-    top: 70px;
-    z-index: 1;
-    padding: 10px;
-    display: flex;
-    flex-direction: column;
-}
-
-.input {
-    height: var(--inputHeight);
-    margin: 3px;
-}
-
-.submitButton {
-    color: var(--colorWhite);
-    background-color: black;
-    text-align: center;
-    margin: 3px;
-    padding: var(--paddingButton);
-    cursor: pointer;
-    text-align: center;
+.logoText {
+    margin: 0;
+    font-size: var(--fontSizeLarger);
+    color: var(--colorBlack);
+    font-weight: bold;
 }
