--- a/taskuraha-client/src/Navbar/Components/SearchMenu/Components/Header/Header.module.css
+++ b/taskuraha-client/src/Navbar/Components/SearchMenu/Components/Header/Header.module.css
@@ -6,7 +6,7 @@
 
 .headerContainer {
     text-align: left;
-    border-bottom: 2px solid var(--colorBrightBlue);
+    border-bottom: 2px solid var(--colorVeryLightGrey);
     margin: 0;
 }
 
@@ -15,4 +15,5 @@
     padding: 5px;
     width: fit-content;
     font-size: var(--fontSizeLarge);
+    color: var(--colorBlack);
 }
