--- a/taskuraha-client/src/lib/CommonComponents/Buttons/BurgerMenuButton/BurgerMenuButton.module.css
+++ b/taskuraha-client/src/lib/CommonComponents/Buttons/BurgerMenuButton/BurgerMenuButton.module.css
@@ -2,6 +2,11 @@
     display: flex;
     flex-direction: column;
     cursor: pointer;
+    padding: var(--paddingBasic);
+}
+
+.main:hover {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.03) 0 0);
 }
 
 .line {
