Created basic foundation for client frontpage.

--- a/ilmoitustaulu-client/src/NavBar/Components/SearchMenu/SearchMenu.module.css
+++ b/ilmoitustaulu-client/src/NavBar/Components/SearchMenu/SearchMenu.module.css
@@ -1,6 +1,17 @@
 .main {}
 
-.menu {
+.dropDownMenu {
+    left: 0;
+    width: calc(100% - 40px);
+    height: 550px;
+    background-color: var(--colorWhite);
+    border-radius: 4px;
+    display: flex;
+    flex-direction: row;
+    z-index: 3;
+}
+
+.modalMenu {
     width: 300px;
     height: 550px;
     background-color: var(--colorWhite);
