--- a/ilmoitustaulu-client/src/Auth/Components/LoginAndRegisterMenu/Components/LoginMenu/LoginMenu.module.css
+++ b/ilmoitustaulu-client/src/Auth/Components/LoginAndRegisterMenu/Components/LoginMenu/LoginMenu.module.css
@@ -1,10 +1,14 @@
 .main {
+    width: 100%;
     margin-left: 20px;
     margin-right: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .inputContainer {
-    margin: 0;
     margin: 3px;
     border-radius: var(--borderRadiusBasic);
     display: flex;
