--- a/ilmoitustaulu-client/src/Footer/Footer.module.css
+++ b/ilmoitustaulu-client/src/Footer/Footer.module.css
@@ -1,5 +1,4 @@
 .main {
-    margin-top: 30px;
     width: 100%;
     height: 50px;
     display: flex;
@@ -13,5 +12,6 @@
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    color: var(--colorDarkGrey);
+    color: var(--colorVeryLightGrey);
+    background-color: var(--colorBlack);
 }
