--- a/ilmoitustaulu-client/src/NavBar/Components/SearchMenu/Components/PriceInput/PriceInput.module.css
+++ b/ilmoitustaulu-client/src/NavBar/Components/SearchMenu/Components/PriceInput/PriceInput.module.css
@@ -8,8 +8,11 @@
 }
 
 .contentContainer {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
     text-align: center;
-    width: 90%;
+    width: 100%;
 }
 
 .lineText {
