--- a/ilmoitustaulu-client/src/NavBar/NavBar.module.css
+++ b/ilmoitustaulu-client/src/NavBar/NavBar.module.css
@@ -7,6 +7,7 @@
     flex-direction: column;
     align-items: center;
     background-color: var(--colorWhite);
+    box-shadow: var(--shadowBasic);
     z-index: 2;
 }
 
