--- a/ilmoitustaulu-client/src/Pages/FrontPage/Components/Ads/Components/Ad/Ad.module.css
+++ b/ilmoitustaulu-client/src/Pages/FrontPage/Components/Ads/Components/Ad/Ad.module.css
@@ -1,21 +1,29 @@
 .main {
     height: 400px;
     width: 250px;
-    margin: 20px;
-    border: 1px solid var(--colorGrey);
+    box-shadow: var(--shadowBasicLight);
     background-color: var(--colorWhite);
     border-radius: var(--borderRadiusBasic);
+    overflow: hidden;
 }
 
 .imageContainer {
+    position: relative;
     width: 100%;
     height: 150px;
-    background-color: var(--colorVeryLightGrey);
-    border-top-left-radius: var(--borderRadiusBasic);
-    border-top-right-radius: var(--borderRadiusBasic);
+    overflow: hidden;
+}
+
+.backgroundImage {
+    filter: blur(25px) brightness(90%);
+    object-fit: cover;
+    width: 200%;
+    height: 200%;
+    position: absolute;
 }
 
 .image {
+    position: absolute;
     width: 100%;
     height: 100%;
     object-fit: contain;
@@ -27,7 +35,7 @@
 
 .typeText {
     font-size: var(--fontSizeLarge);
-    color: var(--colorBlack);
+    color: var(--colorOrange);
     margin: 0;
 }
 
@@ -62,6 +70,7 @@
 
 .descriptionText {
     margin: 0;
+    margin-top: 10px;
     word-wrap: break-word;
     font-size: var(--fontSizeMedium);
     color: var(--colorDarkGrey);
