--- a/ilmoitustaulu-client/src/Pages/FrontPage/Components/Ads/Components/Ad/Components/AdModal/AdModal.module.css
+++ b/ilmoitustaulu-client/src/Pages/FrontPage/Components/Ads/Components/Ad/Components/AdModal/AdModal.module.css
@@ -1,10 +1,11 @@
 .main {
     position: relative;
-    height: 550px;
-    width: 500px;
+    height: 600px;
+    width: 460px;
     margin: 20px;
     background-color: var(--colorWhite);
     border-radius: var(--borderRadiusBasic);
+    overflow: hidden;
     overflow-y: scroll;
 }
 
@@ -12,9 +13,7 @@
     position: relative;
     width: 100%;
     height: 230px;
-    background-color: var(--colorVeryLightGrey);
-    border-top-left-radius: var(--borderRadiusBasic);
-    border-top-right-radius: var(--borderRadiusBasic);
+    overflow: hidden;
 }
 
 .imageNavigationContainer {
@@ -25,6 +24,7 @@
     align-items: center;
     width: 100%;
     height: 100%;
+    z-index: 2;
 }
 
 .arrowContainer {
@@ -34,8 +34,8 @@
     height: fit-content;
     width: fit-content;
     border-radius: 100px;
-    margin: 10px;
-    background-color: var(--colorPastelBlue);
+    margin: 15px;
+    background-color: var(--colorDarkGrey);
     cursor: pointer;
 }
 
@@ -43,25 +43,42 @@
     background-image: linear-gradient(rgba(0, 0, 0, 0.1) 0 0);
 }
 
+
+.backgroundImage {
+    filter: blur(25px) brightness(90%);
+    object-fit: cover;
+    width: 200%;
+    height: 200%;
+    position: absolute;
+    z-index: 1;
+}
+
 .image {
+    position: absolute;
     width: 100%;
     height: 100%;
     object-fit: contain;
+    z-index: 1;
 }
 
 .infoContainer {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    margin: 10px;
+    margin: 20px;
+    margin-top: 0;
+    margin-bottom: 10px;
 }
 
 .typeAndLocationTextContainer {}
 
 .typeText {
-    font-size: var(--fontSizeLarge);
-    color: var(--colorBlack);
-    margin: 0;
+    font-size: var(--fontSizeLarger);
+    color: coral;
+    background-color: var(--colorWhite);
+    margin: 20px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 .locationText {
@@ -88,22 +105,22 @@
     font-size: var(--fontSizeLarge);
     font-weight: bold;
     color: var(--colorBlack);
-    margin: 10px;
-    margin-bottom: 15px;
+    margin: 20px;
+    margin-top: 0;
+    margin-bottom: 20px;
 }
 
 .descriptionTextContainer {
     position: relative;
     overflow: hidden;
-    margin: 10px;
+    margin: 20px;
 }
 
 .descriptionText {
-    margin: 0;
     word-wrap: break-word;
     font-size: var(--fontSizeMedium);
     color: var(--colorDarkGrey);
-    min-height: 140px;
+    min-height: 130px;
 }
 
 .buttonsContainer {
