--- a/ilmoitustaulu-client/src/index.css
+++ b/ilmoitustaulu-client/src/index.css
@@ -8,6 +8,7 @@ body {
   width: 100%;
   padding: 0;
   margin: 0;
+  color: var(--colorBlack);
 }
 
 :root {
@@ -16,14 +17,18 @@ body {
   --colorPastelBlue: rgb(96, 160, 255);
   --colorBrightBlue: rgb(35, 123, 255);
   --colorPastelYellow: rgb(255, 221, 83);
+  --colorOrange: coral;
   --colorPastelRed: rgb(255, 65, 87);
-  --colorVeryLightGrey: rgb(245, 245, 245);
-  --colorGrey: rgb(200, 200, 200);
-  --colorDarkGrey: rgb(70, 70, 70);
-  --colorBlack: rgb(15, 15, 15);
+  --colorVeryLightGrey: rgb(240, 240, 240);
+  --colorLightGrey: rgb(220, 220, 220);
+  --colorGrey: rgb(150, 150, 150);
+  --colorDarkGrey: rgb(100, 100, 100);
+  --colorBlack: rgb(45, 45, 45);
   --colorWhite: rgb(255, 255, 255);
-  --shadowBasic: 0 0 5px rgba(0, 0, 0.8, 0.4);
-  --shadowBottom: 0px 3px 3px rgba(0, 0, 0, 0.11);
+  --shadowBasic: 0 0 10px rgba(130, 130, 130, 0.5);
+  --shadowBasicLight: 0 0 5px rgb(200, 200, 200);
+  --shadowBottom: 0px 3px 3px rgba(150, 150, 150, 0.5);
+  --shadowBottomRight: 1px 3px 2px rgba(150, 150, 150, 0.3);
   /* font */
   --fontSizeSmall: 12px;
   --fontSizeMedium: 15px;
