--- a/ilmoitustaulu-client/src/lib/CommonComponents/Buttons/IconButton/IconButton.module.css
+++ b/ilmoitustaulu-client/src/lib/CommonComponents/Buttons/IconButton/IconButton.module.css
@@ -4,8 +4,8 @@
     justify-content: center;
     align-items: center;
     border-radius: var(--borderRadiusBasic);
+    /* box-shadow: var(--shadowBottom); */
     cursor: pointer;
-    box-shadow: var(--shadowBottom);
     border: none;
 }
 
