--- a/ilmoitustaulu-client/src/lib/CommonComponents/Inputs/DeselectorList/Components/ListItem/ListItem.module.css
+++ b/ilmoitustaulu-client/src/lib/CommonComponents/Inputs/DeselectorList/Components/ListItem/ListItem.module.css
@@ -12,5 +12,5 @@
     margin: 0;
     margin-left: 3px;
     font-size: var(--fontSizeSmall);
-    color: var(--colorBlack);
+    color: var(--colorWhite);
 }
