--- a/ilmoitustaulu-client/src/lib/CommonComponents/Inputs/Selector/Components/Selections/Selections.module.css
+++ b/ilmoitustaulu-client/src/lib/CommonComponents/Inputs/Selector/Components/Selections/Selections.module.css
@@ -1,5 +1,5 @@
 .main {
-    height: 200px;
+    height: 350px;
     display: flex;
     flex-direction: column;
     background-color: var(--colorWhite);
@@ -7,6 +7,7 @@
     border-top-left-radius: var(--borderRadiusBasic);
     border-top-right-radius: var(--borderRadiusBasic);
     overflow-y: scroll;
+    text-align: left;
 }
 
 .selection {
@@ -20,5 +21,5 @@
 }
 
 .selection[is-selected=true] {
-    background-color: var(--colorVeryLightGrey);
+    background-color: rgb(245, 245, 245);
 }
