--- a/ilmoitustaulu-client/src/lib/CommonComponents/UI/DropDownMenu/DropDownMenu.module.css
+++ b/ilmoitustaulu-client/src/lib/CommonComponents/UI/DropDownMenu/DropDownMenu.module.css
@@ -1,22 +1,20 @@
 .main {
     position: relative;
-    visibility: hidden;
-}
-
-.main[is-open=true] {
-    position: relative;
-    visibility: visible;
 }
 
 .contentContainer {
+    visibility: hidden;
     position: absolute;
     border-radius: var(--borderRadiusBasic);
     background-color: var(--colorWhite);
-    padding: 10px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     box-shadow: var(--shadowBasic);
     text-align: center;
+}
+
+.contentContainer[is-open=true] {
+    visibility: visible;
 }
