--- a/ilmoitustaulu-client/src/NavBar/Components/SearchMenu/Components/CategorySelection/CategorySelection.module.css
+++ b/ilmoitustaulu-client/src/NavBar/Components/SearchMenu/Components/CategorySelection/CategorySelection.module.css
@@ -1,5 +1,6 @@
 .main {
-    margin-bottom: 20px;
+    margin: 20px;
+    margin-top: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -8,7 +9,7 @@
 
 .contentContainer {
     position: relative;
-    width: 90%;
+    width: 100%;
 }
 
 .inputContainer {
@@ -19,4 +20,5 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin-bottom: 10px;
 }
