--- a/ilmoitustaulu-client/src/NavBar/Components/SearchMenu/Components/Header/Header.module.css
+++ b/ilmoitustaulu-client/src/NavBar/Components/SearchMenu/Components/Header/Header.module.css
@@ -15,5 +15,5 @@
     padding: 5px;
     width: fit-content;
     font-size: var(--fontSizeLarge);
-    color: var(--colorBlack);
+    color: var(--colorLightBlack);
 }
