--- a/ilmoitustaulu-client/src/lib/CommonComponents/Inputs/Selector/Components/Selections/Selections.module.css
+++ b/ilmoitustaulu-client/src/lib/CommonComponents/Inputs/Selector/Components/Selections/Selections.module.css
@@ -17,7 +17,7 @@
     border-radius: var(--borderRadiusBasic);
     padding: 10px;
     font-size: var(--fontSizeMedium);
-    color: var(--colorBlack);
+    color: var(--colorLightBlack);
 }
 
 .selection[is-selected=true] {
