--- a/ilmoitustaulu-client/src/Footer/Footer.module.css
+++ b/ilmoitustaulu-client/src/Footer/Footer.module.css
@@ -13,5 +13,5 @@
     justify-content: space-evenly;
     align-items: center;
     color: var(--colorVeryLightGrey);
-    background-color: var(--colorBlack);
+    background-color: var(--colorLightBlack);
 }
