--- a/ilmoitustaulu-client/src/Pages/FrontPage/Components/Ads/Components/Ad/Components/AdModal/AdModal.module.css
+++ b/ilmoitustaulu-client/src/Pages/FrontPage/Components/Ads/Components/Ad/Components/AdModal/AdModal.module.css
@@ -104,7 +104,7 @@
 .priceText {
     font-size: var(--fontSizeLarge);
     font-weight: bold;
-    color: var(--colorBlack);
+    color: var(--colorLightBlack);
     margin: 20px;
     margin-top: 0;
     margin-bottom: 20px;
