--- a/ilmoitustaulu-client/src/Pages/FrontPage/Components/PageSelector/PageSelector.module.css
+++ b/ilmoitustaulu-client/src/Pages/FrontPage/Components/PageSelector/PageSelector.module.css
@@ -1,10 +1,13 @@
 .main {
+    position: sticky;
+    bottom: 0;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    padding: 20px;
+    height: 60px;
     box-shadow: var(--shadowBasic);
+    background-color: var(--colorWhite);
 }
 
 .buttonsContainer {
