--- a/ilmoitustaulu-client/src/lib/CommonComponents/Inputs/CheckBoxSelector/Components/CheckBoxes/CheckBox.module.css
+++ b/ilmoitustaulu-client/src/lib/CommonComponents/Inputs/CheckBoxSelector/Components/CheckBoxes/CheckBox.module.css
@@ -8,7 +8,7 @@
 }
 
 .button {
-    border: 2px solid var(--colorBlack);
+    border: 2px solid var(--colorLightBlack);
     margin: 3px;
     height: 20px;
     width: 20px;
@@ -26,5 +26,5 @@
 .label {
     margin: 0;
     font-size: var(--fontSizeBasic);
-    color: var(--colorBlack);
+    color: var(--colorLightBlack);
 }
