--- a/ilmoitustaulu-client/src/lib/CommonComponents/Inputs/TextInput/TextInput.module.css
+++ b/ilmoitustaulu-client/src/lib/CommonComponents/Inputs/TextInput/TextInput.module.css
@@ -5,7 +5,8 @@
 .input {
     height: var(--inputHeight);
     border: 1px solid var(--colorGrey);
-    border-bottom: 0;
+    border-top: 0.5px solid var(--colorGrey);
+    border-bottom: 0.5px solid var(--colorGrey);
     outline: 0;
     padding: 10px;
     width: calc(100% - 22px);
@@ -14,6 +15,7 @@
 
 .input[is-first=true] {
     height: var(--inputHeight);
+    border-top: 1px solid var(--colorGrey);
     margin-bottom: 0;
     border-top-left-radius: 4px;
     border-top-right-radius: 4px;
@@ -21,8 +23,12 @@
 
 .input[is-last=true] {
     height: var(--inputHeight);
+    border-bottom: 1px solid var(--colorGrey);
     margin-top: 0;
     border-bottom-left-radius: 4px;
     border-bottom-right-radius: 4px;
-    border-bottom: 1px solid var(--colorGrey);
+}
+
+.input:focus {
+    box-shadow: var(--shadowBasic);
 }
