--- a/ilmoitustaulu-client/src/lib/CommonComponents/UI/DropDownMenu/DropDownMenu.module.css
+++ b/ilmoitustaulu-client/src/lib/CommonComponents/UI/DropDownMenu/DropDownMenu.module.css
@@ -2,9 +2,14 @@
     position: relative;
 }
 
-.contentContainer {
-    visibility: hidden;
+.childrenContainer[is-open=false] {
+    display: none;
+}
+
+.childrenContainer[is-open=true] {
+    display: inline-block;
     position: absolute;
+    z-index: 3;
     border-radius: var(--borderRadiusBasic);
     background-color: var(--colorWhite);
     display: flex;
@@ -13,8 +18,4 @@
     align-items: center;
     box-shadow: var(--shadowBasic);
     text-align: center;
-}
-
-.contentContainer[is-open=true] {
-    visibility: visible;
 }
